# ZorkForMCUs

./: .gitignore  .gitmodules  LICENSE.txt  README.md  zork1.z3
src/: dirent.h  diskio_stub.c  ffconf.h  fizmo_bridge.cpp  fizmo_bridge.h  fizmo_embedded_compat.h  fizmo_filesys_hybrid.c  fizmo_filesys_hybrid.h  fizmo_locale_stubs.c  fizmo_rtos_bridge.c  fizmo_rtos_bridge.h  posix_stubs.c  sd_diskio.c  sd_diskio.h  sd_init.c  sd_init.h  story_data.S  story_data.h
src/fatfs/: diskio.c  ff_gen_drv.c  ff_gen_drv.h
src/locales/: locale_data.h
src/rt1050/: fsl_adapter_igpio.c  sdmmc_config.h
src/rt1170/: sdmmc_config.c  sdmmc_config.h  vglite_memory_config.c
src/sys/: stat.h
ui/qul/ZorkUI/: BoardDefaults_480vkb.qmlprojectconfig  BoardDefaults_540vkb.qmlprojectconfig  BoardDefaults_720vkb.qmlprojectconfig  CMakeLists.txt  DisplayConfig.h  FizmoBackend.cpp  FizmoBackend.h  ZorkKeyboard.qml  ZorkUI.qml  ZorkUI.qmlproject  ZorkUI_RT1050.qml  ZorkUI_RT1050.qmlproject  build-common.sh  build-flash-rt1050.sh  build-flash-rt1170.sh  build-run-desktop.sh  main_freertos.cpp
ui/qul/ZorkUI/fonts/: TextInputFontmap.fmp  ZorkMCUFontmap.fmp
ui/qul/ZorkUI/images/: compass-rose.txt
ui/qul/ZorkUI/styles/+zork/: StyleConfig.qml
